syntax="proto3";
package java;

option java_package = "protobuffprotocol";
option java_outer_classname = "Protobufs";

message Participant{
  int32 id=1;
  string name=2;
  int32 totalPoints=3;
}

message Referee{
  int32 id=1;
  string name=2;
  string email=3;
  string password=4;
}

message Test{
  int32 id=1;
  int32 idParticipant=2;
  int32 idReferee=3;
  int32 points=4;
  string date=5;
}

message Request{
  enum Type {UNKOWN=0; LOGIN=1; LOGOUT=2; GET_ALL_PARTICIPANTS=3; ADD_TEST=4;
    GET_ALL_ACTIVE_PARTICIPANTS=5;}

  Type type = 1;

  oneof payload{
    Referee referee = 2;
    Test test = 3;
    int32 id = 4;
  }

}

message Response{
  enum Type {UNKOWN=0; OK=1; ERROR=2; UPDATE=3; GET_ALL_PARTICIPANTS=4;
    GET_ALL_ACTIVE_PARTICIPANTS=5; TEST_ADDED=6;}

  Type type = 1;

  repeated Participant participants = 2;
  Referee referee = 3;
  Test test = 4;
  string error = 5;
}